--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
     main{max-width:var(--max);margin:0 auto;padding:36px 20px 90px;line-height:1.75;font-size:18px;}
     section{margin:0 0 44px;}
     h2{margin:0 0 14px;font-size:22px;letter-spacing:0.2px;}
-    p{margin:0 0 16px;color:var(--text);}
+    p{margin:0 0 22px;color:var(--text);}
+
+    #vision p{
+  margin-bottom: 28px;
+}
+
     .rule{height:1px;background:var(--line);margin:16px 0 18px;}
     .callout{
       border:1px solid var(--line);
