--- a/index.html
+++ b/index.html
@@ -32,16 +32,36 @@
       backdrop-filter:blur(10px);-webkit-backdrop-filter:blur(10px);
       box-shadow:0 18px 60px rgba(0,0,0,0.45);
     }
+
+    /* HERO LOGO (replaces the H1 for a seamless, premium lockup) */
+    .hero-logo{
+      display:block;
+      width:min(520px, 100%);
+      height:auto;
+      margin:0 auto 10px;
+      opacity:0.98;
+      transform:translateY(-2px);
+      filter:drop-shadow(0 14px 40px rgba(0,0,0,0.35));
+      border-radius:10px; /* softens the PNG edge slightly inside the glass panel */
+    }
+    @media (max-width:720px){
+      .hero-logo{
+        width:min(440px, 100%);
+        margin-bottom:8px;
+      }
+    }
+
     h1{margin:0 0 8px;font-size:44px;letter-spacing:0.2px;}
-    .tagline{margin:0;color:var(--muted);font-size:16px;line-height:1.5;}
+    .tagline{margin:0;color:var(--muted);font-size:16px;line-height:1.5;text-align:center;}
+
     main{max-width:var(--max);margin:0 auto;padding:36px 20px 90px;line-height:1.75;font-size:18px;}
     section{margin:0 0 44px;}
     h2{margin:0 0 14px;font-size:22px;letter-spacing:0.2px;}
     p{margin:0 0 22px;color:var(--text);}
 
     #vision p{
-  margin-bottom: 28px;
-}
+      margin-bottom: 28px;
+    }
 
     .rule{height:1px;background:var(--line);margin:16px 0 18px;}
     .callout{
@@ -79,7 +99,7 @@
   <!-- Porsche -->
   <header class="Porsche">
     <div class="Porsche-inner">
-      <h1>Millionaire Minds</h1>
+      <img class="hero-logo" src="MM - Inverted - Blk Bkgd.png" alt="Millionaire Minds" />
       <p class="tagline">A weekly environment for clarity, skill-building, and long-term growth.</p>
     </div>
   </header>
