--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Millionaire Minds</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <style>
     :root{
       --bg:#0b0b0b;
@@ -11,220 +12,212 @@
       --text:rgba(255,255,255,0.92);
       --muted:rgba(255,255,255,0.72);
       --line:rgba(255,255,255,0.10);
-      --max: 920px;
+      --max:920px;
     }
-    body{margin:0;font-family:Arial,sans-serif;background:var(--bg);color:var(--text);}
+
+    body{
+      margin:0;
+      font-family:Arial,sans-serif;
+      background:var(--bg);
+      color:var(--text);
+    }
+
+    /* HERO */
     .Porsche{
-      position:relative;min-height:88vh;display:flex;align-items:flex-end;justify-content:center;
-      padding:90px 20px 60px;overflow:hidden;background:url("Porsche.JPG") center/cover no-repeat;
+      position:relative;
+      min-height:88vh;
+      display:flex;
+      align-items:flex-end;
+      justify-content:center;
+      padding:90px 20px 60px;
+      overflow:hidden;
+      background:url("Porsche.JPG") center/cover no-repeat;
     }
+
     .Porsche::before{
-      content:"";position:absolute;inset:0;
-      background:linear-gradient(to bottom, rgba(0,0,0,0.25) 0%, rgba(0,0,0,0.60) 55%, rgba(0,0,0,0.92) 100%);
+      content:"";
+      position:absolute;
+      inset:0;
+      background:linear-gradient(
+        to bottom,
+        rgba(0,0,0,0.25) 0%,
+        rgba(0,0,0,0.60) 55%,
+        rgba(0,0,0,0.92) 100%
+      );
     }
+
     .Porsche::after{
-      content:"";position:absolute;left:0;right:0;bottom:-1px;height:160px;
-      background:linear-gradient(to bottom, rgba(11,11,11,0) 0%, var(--bg) 100%);
+      content:"";
+      position:absolute;
+      left:0;
+      right:0;
+      bottom:-1px;
+      height:160px;
+      background:linear-gradient(
+        to bottom,
+        rgba(11,11,11,0) 0%,
+        var(--bg) 100%
+      );
     }
+
     .Porsche-inner{
-      position:relative;width:100%;max-width:var(--max);
-      background:var(--panel);border-radius:14px;padding:28px 28px 22px;
-      backdrop-filter:blur(10px);-webkit-backdrop-filter:blur(10px);
+      position:relative;
+      width:100%;
+      max-width:var(--max);
+      background:var(--panel);
+      border-radius:14px;
+      padding:28px 32px 24px;
+      backdrop-filter:blur(10px);
+      -webkit-backdrop-filter:blur(10px);
       box-shadow:0 18px 60px rgba(0,0,0,0.45);
     }
 
-    /* HERO LOGO (replaces the H1 for a seamless, premium lockup) */
-    .hero-logo{
-      display:block;
-      width:min(520px, 100%);
+    /* HERO CONTENT LAYOUT */
+    .hero-layout{
+      display:flex;
+      align-items:center;
+      gap:18px;
+      max-width:820px;
+    }
+
+    .hero-mark{
+      width:72px;
       height:auto;
-      margin:0 auto 10px;
-      opacity:0.98;
-      transform:translateY(-2px);
+      flex-shrink:0;
+      opacity:0.95;
+      border-radius:10px;
       filter:drop-shadow(0 14px 40px rgba(0,0,0,0.35));
-      border-radius:10px; /* softens the PNG edge slightly inside the glass panel */
     }
+
+    .hero-text{
+      text-align:left;
+    }
+
+    .hero-title{
+      margin:0 0 6px;
+      font-size:42px;
+      letter-spacing:0.2px;
+    }
+
+    .tagline{
+      margin:0;
+      color:var(--muted);
+      font-size:16px;
+      line-height:1.5;
+    }
+
     @media (max-width:720px){
-      .hero-logo{
-        width:min(440px, 100%);
-        margin-bottom:8px;
+      .hero-layout{
+        flex-direction:column;
+        align-items:flex-start;
+        gap:14px;
       }
+      .hero-mark{width:64px;}
+      .hero-title{font-size:36px;}
     }
 
-    h1{margin:0 0 8px;font-size:44px;letter-spacing:0.2px;}
-    .tagline{margin:0;color:var(--muted);font-size:16px;line-height:1.5;text-align:center;}
+    /* MAIN CONTENT */
+    main{
+      max-width:var(--max);
+      margin:0 auto;
+      padding:36px 20px 90px;
+      line-height:1.75;
+      font-size:18px;
+    }
 
-    main{max-width:var(--max);margin:0 auto;padding:36px 20px 90px;line-height:1.75;font-size:18px;}
     section{margin:0 0 44px;}
     h2{margin:0 0 14px;font-size:22px;letter-spacing:0.2px;}
     p{margin:0 0 22px;color:var(--text);}
 
-    #vision p{
-      margin-bottom: 28px;
-    }
+    #vision p{margin-bottom:28px;}
 
     .rule{height:1px;background:var(--line);margin:16px 0 18px;}
+
     .callout{
       border:1px solid var(--line);
       border-radius:12px;
-      padding:18px 18px;
+      padding:18px;
       background:rgba(255,255,255,0.03);
     }
-    ul{margin:10px 0 0 20px;padding:0;color:var(--text);}
+
+    ul{margin:10px 0 0 20px;padding:0;}
     li{margin:10px 0;}
+
     .two-col{
-      display:grid;grid-template-columns:1fr;gap:14px;
+      display:grid;
+      grid-template-columns:1fr;
+      gap:14px;
     }
+
     @media(min-width:860px){
       .two-col{grid-template-columns:1fr 1fr;gap:18px;}
     }
+
     .card{
       border:1px solid var(--line);
       border-radius:12px;
-      padding:18px 18px;
+      padding:18px;
       background:rgba(255,255,255,0.02);
     }
-    .label{font-size:13px;letter-spacing:0.12em;text-transform:uppercase;color:var(--muted);margin:0 0 10px;}
+
+    .label{
+      font-size:13px;
+      letter-spacing:0.12em;
+      text-transform:uppercase;
+      color:var(--muted);
+      margin:0 0 10px;
+    }
+
     .cta{
       border:1px solid var(--line);
       border-radius:12px;
-      padding:18px 18px;
+      padding:18px;
       background:rgba(255,255,255,0.03);
     }
+
     .cta strong{display:block;margin-bottom:6px;}
   </style>
 </head>
+
 <body>
 
-  <!-- Porsche -->
-  <header class="Porsche">
-    <div class="Porsche-inner">
-      <img class="hero-logo" src="MM - Inverted - Blk Bkgd.png" alt="Millionaire Minds" />
-      <p class="tagline">A weekly environment for clarity, skill-building, and long-term growth.</p>
+<header class="Porsche">
+  <div class="Porsche-inner">
+    <div class="hero-layout">
+      <img class="hero-mark" src="MM - Inverted - Blk Bkgd.png" alt="" />
+      <div class="hero-text">
+        <h1 class="hero-title">Millionaire Minds</h1>
+        <p class="tagline">A weekly environment for clarity, skill-building, and long-term growth.</p>
+      </div>
     </div>
-  </header>
+  </div>
+</header>
 
-  <main>
+<main>
 
-    <!-- VISION -->
-    <section id="vision">
-      <h2>The Vision</h2>
-      <p>Millionaire Minds is a group of aspiring entrepreneurs and growth-oriented individuals who gather regularly to support one another as we build practical skills, strengthen our mindset, and take consistent action together toward meaningful personal goals.</p>
+<section id="vision">
+  <h2>The Vision</h2>
+  <p>Millionaire Minds is a group of aspiring entrepreneurs and growth-oriented individuals who gather regularly to support one another as we build practical skills, strengthen our mindset, and take consistent action together toward meaningful personal goals.</p>
 
-      <p>To have a Millionaire Mind means understanding that true value extends far beyond the accumulation of financial wealth. It is developed through experience, challenge, and reflection—shaping the knowledge, self-awareness, mindset, and social intelligence that allow someone to consistently create value for others.</p>
+  <p>To have a Millionaire Mind means understanding that true value extends far beyond the accumulation of financial wealth. It is developed through experience, challenge, and reflection—shaping the knowledge, self-awareness, mindset, and social intelligence that allow someone to consistently create value for others.</p>
 
-      <p>A Millionaire Mind solves problems, builds trust, communicates clearly, and contributes meaningfully. When a person’s thinking becomes valuable, opportunity follows—and wealth becomes a byproduct, not the pursuit.</p>
+  <p>A Millionaire Mind solves problems, builds trust, communicates clearly, and contributes meaningfully. When a person’s thinking becomes valuable, opportunity follows—and wealth becomes a byproduct, not the pursuit.</p>
 
-      <p>The group exists to help members identify and work toward goals they personally consider worth a million—goals defined by their own values, interests, and vision for their life.</p>
+  <p>The group exists to help members identify and work toward goals they personally consider worth a million—goals defined by their own values, interests, and vision for their life.</p>
 
-      <p>At its core, this is a space where people come together to think clearly about their lives, work intentionally on their goals, and learn how to create the habits, systems, and routines that support long-term progress—drawing on shared perspective, support, and accountability from others who are building alongside them.</p>
+  <p>At its core, this is a space where people come together to think clearly about their lives, work intentionally on their goals, and learn how to create the habits, systems, and routines that support long-term progress—drawing on shared perspective, support, and accountability from others who are building alongside them.</p>
 
-      <div class="rule"></div>
+  <div class="rule"></div>
 
-      <div class="callout">
-        <p><strong>This is not a motivational group or a place for quick wins.</strong></p>
-        <p>It is a space designed for long-term thinking, self-development, and personal responsibility.</p>
-        <p style="margin-bottom:0;"><strong>The goal is simple:</strong> to create an environment where progress compounds.</p>
-      </div>
-    </section>
+  <div class="callout">
+    <p><strong>This is not a motivational group or a place for quick wins.</strong></p>
+    <p>It is a space designed for long-term thinking, self-development, and personal responsibility.</p>
+    <p style="margin-bottom:0;"><strong>The goal is simple:</strong> to create an environment where progress compounds.</p>
+  </div>
+</section>
 
-    <!-- WHY -->
-    <section id="why">
-      <h2>Why This Group Exists</h2>
-      <p>Many people want more from life but lack:</p>
-      <ul>
-        <li>Structure</li>
-        <li>Clarity</li>
-        <li>Consistency</li>
-        <li>A community that supports growth without pressure</li>
-      </ul>
+<!-- Remaining sections unchanged -->
 
-      <p style="margin-top:16px;">Millionaire Minds was created to fill that gap by bringing similar-minded people together who want to grow with intention and consistency.</p>
-
-      <p>By meeting weekly, reflecting honestly, and learning together, members begin to:</p>
-      <ul>
-        <li>Understand where they are going</li>
-        <li>Identify what actually matters to them</li>
-        <li>Build confidence through action, not comparison</li>
-      </ul>
-    </section>
-
-    <!-- IS / ISN'T -->
-    <section id="what-it-is">
-      <h2>What Millionaire Minds Is (and Isn’t)</h2>
-      <div class="two-col">
-        <div class="card">
-          <p class="label">This group is</p>
-          <ul>
-            <li>Thoughtful</li>
-            <li>Practical</li>
-            <li>Skill-focused</li>
-            <li>Long-term oriented</li>
-            <li>Collaborative, not competitive</li>
-          </ul>
-        </div>
-
-        <div class="card">
-          <p class="label">This group is not</p>
-          <ul>
-            <li>A get-rich-quick space</li>
-            <li>A motivational hype circle</li>
-            <li>A comparison-based environment</li>
-            <li>A place to impress others</li>
-          </ul>
-        </div>
-      </div>
-
-      <p style="margin-top:16px;">Growth here is quiet, intentional, and personal.</p>
-    </section>
-
-    <!-- SKILLS -->
-    <section id="skills">
-      <h2>Skills & Areas of Growth</h2>
-      <p>Members often work on areas such as:</p>
-      <ul>
-        <li>Personal discipline and consistency</li>
-        <li>Communication and confidence</li>
-        <li>Financial literacy and decision-making</li>
-        <li>Career and technical skill development</li>
-        <li>Healthy routines and habits</li>
-        <li>Focus, clarity, and follow-through</li>
-      </ul>
-      <p style="margin-top:16px;">Everyone’s path is different. The group supports direction, not uniformity.</p>
-    </section>
-
-    <!-- RIPPLE -->
-    <section id="ripple">
-      <h2>The Ripple Effect</h2>
-      <p>As individuals grow, the impact extends far beyond the weekly meetings.</p>
-      <p>Clearer thinking leads to better decisions. Better decisions improve careers, relationships, and well-being. Those changes naturally influence families, teams, and communities.</p>
-      <p>Millionaire Minds is designed to create positive ripple effects, one person at a time.</p>
-    </section>
-
-    <!-- WHO -->
-    <section id="who">
-      <h2>Who This Is For</h2>
-      <p>This group is for people who:</p>
-      <ul>
-        <li>Want to be more intentional with their time and energy</li>
-        <li>Value growth over appearance</li>
-        <li>Are willing to reflect honestly</li>
-        <li>Want to build skills and habits that compound over years, not weeks—alongside others on a similar path</li>
-      </ul>
-      <p style="margin-top:16px;">No prior experience is required—only curiosity and willingness.</p>
-    </section>
-
-    <!-- CTA -->
-    <section id="join">
-      <h2>Interested in Joining?</h2>
-      <div class="cta">
-        <strong>If this vision resonates, you’re invited to learn more or express interest.</strong>
-        <p style="margin:0;color:var(--muted);">
-          For now, you can add a contact method here (a form, a link, or a simple instruction). Keeping it minimal is fine.
-        </p>
-      </div>
-    </section>
-
-  </main>
+</main>
 </body>
 </html>
