--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       box-shadow:0 18px 60px rgba(0,0,0,0.45);
     }
 
-    /* HERO CONTENT LAYOUT */
+    /* HERO CONTENT LAYOUT (logo smaller, left of title) */
     .hero-layout{
       display:flex;
       align-items:center;
@@ -129,6 +129,7 @@
     h2{margin:0 0 14px;font-size:22px;letter-spacing:0.2px;}
     p{margin:0 0 22px;color:var(--text);}
 
+    /* Vision-specific spacing (kept) */
     #vision p{margin-bottom:28px;}
 
     .rule{height:1px;background:var(--line);margin:16px 0 18px;}
@@ -181,43 +182,141 @@
 
 <body>
 
-<header class="Porsche">
-  <div class="Porsche-inner">
-    <div class="hero-layout">
-      <img class="hero-mark" src="MM - Inverted - Blk Bkgd.png" alt="" />
-      <div class="hero-text">
-        <h1 class="hero-title">Millionaire Minds</h1>
-        <p class="tagline">A weekly environment for clarity, skill-building, and long-term growth.</p>
+  <!-- Porsche (Hero) -->
+  <header class="Porsche">
+    <div class="Porsche-inner">
+      <div class="hero-layout">
+        <img class="hero-mark" src="MM - Inverted - Blk Bkgd.png" alt="" />
+        <div class="hero-text">
+          <h1 class="hero-title">Millionaire Minds</h1>
+          <p class="tagline">A weekly environment for clarity, skill-building, and long-term growth.</p>
+        </div>
       </div>
     </div>
-  </div>
-</header>
+  </header>
 
-<main>
+  <main>
 
-<section id="vision">
-  <h2>The Vision</h2>
-  <p>Millionaire Minds is a group of aspiring entrepreneurs and growth-oriented individuals who gather regularly to support one another as we build practical skills, strengthen our mindset, and take consistent action together toward meaningful personal goals.</p>
+    <!-- VISION -->
+    <section id="vision">
+      <h2>The Vision</h2>
+      <p>Millionaire Minds is a group of aspiring entrepreneurs and growth-oriented individuals who gather regularly to support one another as we build practical skills, strengthen our mindset, and take consistent action together toward meaningful personal goals.</p>
 
-  <p>To have a Millionaire Mind means understanding that true value extends far beyond the accumulation of financial wealth. It is developed through experience, challenge, and reflection—shaping the knowledge, self-awareness, mindset, and social intelligence that allow someone to consistently create value for others.</p>
+      <p>To have a Millionaire Mind means understanding that true value extends far beyond the accumulation of financial wealth. It is developed through experience, challenge, and reflection—shaping the knowledge, self-awareness, mindset, and social intelligence that allow someone to consistently create value for others.</p>
 
-  <p>A Millionaire Mind solves problems, builds trust, communicates clearly, and contributes meaningfully. When a person’s thinking becomes valuable, opportunity follows—and wealth becomes a byproduct, not the pursuit.</p>
+      <p>A Millionaire Mind solves problems, builds trust, communicates clearly, and contributes meaningfully. When a person’s thinking becomes valuable, opportunity follows—and wealth becomes a byproduct, not the pursuit.</p>
 
-  <p>The group exists to help members identify and work toward goals they personally consider worth a million—goals defined by their own values, interests, and vision for their life.</p>
+      <p>The group exists to help members identify and work toward goals they personally consider worth a million—goals defined by their own values, interests, and vision for their life.</p>
 
-  <p>At its core, this is a space where people come together to think clearly about their lives, work intentionally on their goals, and learn how to create the habits, systems, and routines that support long-term progress—drawing on shared perspective, support, and accountability from others who are building alongside them.</p>
+      <p>At its core, this is a space where people come together to think clearly about their lives, work intentionally on their goals, and learn how to create the habits, systems, and routines that support long-term progress—drawing on shared perspective, support, and accountability from others who are building alongside them.</p>
 
-  <div class="rule"></div>
+      <div class="rule"></div>
 
-  <div class="callout">
-    <p><strong>This is not a motivational group or a place for quick wins.</strong></p>
-    <p>It is a space designed for long-term thinking, self-development, and personal responsibility.</p>
-    <p style="margin-bottom:0;"><strong>The goal is simple:</strong> to create an environment where progress compounds.</p>
-  </div>
-</section>
+      <div class="callout">
+        <p><strong>This is not a motivational group or a place for quick wins.</strong></p>
+        <p>It is a space designed for long-term thinking, self-development, and personal responsibility.</p>
+        <p style="margin-bottom:0;"><strong>The goal is simple:</strong> to create an environment where progress compounds.</p>
+      </div>
+    </section>
 
-<!-- Remaining sections unchanged -->
+    <!-- WHY -->
+    <section id="why">
+      <h2>Why This Group Exists</h2>
+      <p>Many people want more from life but lack:</p>
+      <ul>
+        <li>Structure</li>
+        <li>Clarity</li>
+        <li>Consistency</li>
+        <li>A community that supports growth without pressure</li>
+      </ul>
 
-</main>
+      <p style="margin-top:16px;">Millionaire Minds was created to fill that gap by bringing similar-minded people together who want to grow with intention and consistency.</p>
+
+      <p>By meeting weekly, reflecting honestly, and learning together, members begin to:</p>
+      <ul>
+        <li>Understand where they are going</li>
+        <li>Identify what actually matters to them</li>
+        <li>Build confidence through action, not comparison</li>
+      </ul>
+    </section>
+
+    <!-- IS / ISN'T -->
+    <section id="what-it-is">
+      <h2>What Millionaire Minds Is (and Isn’t)</h2>
+      <div class="two-col">
+        <div class="card">
+          <p class="label">This group is</p>
+          <ul>
+            <li>Thoughtful</li>
+            <li>Practical</li>
+            <li>Skill-focused</li>
+            <li>Long-term oriented</li>
+            <li>Collaborative, not competitive</li>
+          </ul>
+        </div>
+
+        <div class="card">
+          <p class="label">This group is not</p>
+          <ul>
+            <li>A get-rich-quick space</li>
+            <li>A motivational hype circle</li>
+            <li>A comparison-based environment</li>
+            <li>A place to impress others</li>
+          </ul>
+        </div>
+      </div>
+
+      <p style="margin-top:16px;">Growth here is quiet, intentional, and personal.</p>
+    </section>
+
+    <!-- SKILLS -->
+    <section id="skills">
+      <h2>Skills & Areas of Growth</h2>
+      <p>Members often work on areas such as:</p>
+      <ul>
+        <li>Personal discipline and consistency</li>
+        <li>Communication and confidence</li>
+        <li>Financial literacy and decision-making</li>
+        <li>Career and technical skill development</li>
+        <li>Healthy routines and habits</li>
+        <li>Focus, clarity, and follow-through</li>
+      </ul>
+      <p style="margin-top:16px;">Everyone’s path is different. The group supports direction, not uniformity.</p>
+    </section>
+
+    <!-- RIPPLE -->
+    <section id="ripple">
+      <h2>The Ripple Effect</h2>
+      <p>As individuals grow, the impact extends far beyond the weekly meetings.</p>
+      <p>Clearer thinking leads to better decisions. Better decisions improve careers, relationships, and well-being. Those changes naturally influence families, teams, and communities.</p>
+      <p>Millionaire Minds is designed to create positive ripple effects, one person at a time.</p>
+    </section>
+
+    <!-- WHO -->
+    <section id="who">
+      <h2>Who This Is For</h2>
+      <p>This group is for people who:</p>
+      <ul>
+        <li>Want to be more intentional with their time and energy</li>
+        <li>Value growth over appearance</li>
+        <li>Are willing to reflect honestly</li>
+        <li>Want to build skills and habits that compound over years, not weeks—alongside others on a similar path</li>
+      </ul>
+      <p style="margin-top:16px;">No prior experience is required—only curiosity and willingness.</p>
+    </section>
+
+    <!-- CTA -->
+    <section id="join">
+      <h2>Interested in Joining?</h2>
+      <div class="cta">
+        <strong>If this vision resonates, you’re invited to learn more or express interest.</strong>
+        <p style="margin:0;color:var(--muted);">
+          For now, you can add a contact method here (a form, a link, or a simple instruction). Keeping it minimal is fine.
+        </p>
+      </div>
+    </section>
+
+  </main>
+
 </body>
 </html>
