--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       --text:rgba(255,255,255,0.92);
       --muted:rgba(255,255,255,0.72);
       --line:rgba(255,255,255,0.10);
-      --max:920px;
+      --max: 920px;
     }
 
     body{
@@ -33,31 +33,20 @@
       overflow:hidden;
       background:url("Porsche.JPG") center/cover no-repeat;
     }
-
     .Porsche::before{
       content:"";
       position:absolute;
       inset:0;
-      background:linear-gradient(
-        to bottom,
+      background:linear-gradient(to bottom,
         rgba(0,0,0,0.25) 0%,
         rgba(0,0,0,0.60) 55%,
-        rgba(0,0,0,0.92) 100%
-      );
+        rgba(0,0,0,0.92) 100%);
     }
-
     .Porsche::after{
       content:"";
       position:absolute;
-      left:0;
-      right:0;
-      bottom:-1px;
-      height:160px;
-      background:linear-gradient(
-        to bottom,
-        rgba(11,11,11,0) 0%,
-        var(--bg) 100%
-      );
+      left:0;right:0;bottom:-1px;height:160px;
+      background:linear-gradient(to bottom, rgba(11,11,11,0) 0%, var(--bg) 100%);
     }
 
     .Porsche-inner{
@@ -72,25 +61,34 @@
       box-shadow:0 18px 60px rgba(0,0,0,0.45);
     }
 
-    /* HERO CONTENT LAYOUT (logo smaller, left of title) */
+    /* HERO CONTENT: left-weighted, logo floats above title */
     .hero-layout{
-      display:flex;
-      align-items:center;
-      gap:18px;
       max-width:820px;
-    }
-
-    .hero-mark{
-      width:72px;
-      height:auto;
-      flex-shrink:0;
-      opacity:0.95;
-      border-radius:10px;
-      filter:drop-shadow(0 14px 40px rgba(0,0,0,0.35));
     }
 
     .hero-text{
       text-align:left;
+    }
+
+    .hero-title-wrap{
+      position:relative;
+      display:inline-block; /* keeps the logo aligned to the title block */
+    }
+
+    /* IMPORTANT:
+       For the premium look you described, this file MUST be a transparent PNG of the WHITE MARK ONLY.
+       Put it in the repo root and name it exactly: mm-mark.png
+    */
+    .hero-mark-float{
+      position:absolute;
+      left:0;
+      top:-46px; /* adjust -40 to -52 if you want closer/farther from the title */
+      width:96px; /* adjust size here */
+      height:auto;
+      opacity:0.96;
+      filter:drop-shadow(0 18px 48px rgba(0,0,0,0.45));
+      pointer-events:none;
+      user-select:none;
     }
 
     .hero-title{
@@ -107,16 +105,14 @@
     }
 
     @media (max-width:720px){
-      .hero-layout{
-        flex-direction:column;
-        align-items:flex-start;
-        gap:14px;
+      .hero-mark-float{
+        top:-38px;
+        width:80px;
       }
-      .hero-mark{width:64px;}
       .hero-title{font-size:36px;}
     }
 
-    /* MAIN CONTENT */
+    /* MAIN */
     main{
       max-width:var(--max);
       margin:0 auto;
@@ -124,43 +120,32 @@
       line-height:1.75;
       font-size:18px;
     }
-
     section{margin:0 0 44px;}
     h2{margin:0 0 14px;font-size:22px;letter-spacing:0.2px;}
     p{margin:0 0 22px;color:var(--text);}
 
-    /* Vision-specific spacing (kept) */
+    /* Vision-specific spacing */
     #vision p{margin-bottom:28px;}
 
     .rule{height:1px;background:var(--line);margin:16px 0 18px;}
-
     .callout{
       border:1px solid var(--line);
       border-radius:12px;
       padding:18px;
       background:rgba(255,255,255,0.03);
     }
-
-    ul{margin:10px 0 0 20px;padding:0;}
+    ul{margin:10px 0 0 20px;padding:0;color:var(--text);}
     li{margin:10px 0;}
-
-    .two-col{
-      display:grid;
-      grid-template-columns:1fr;
-      gap:14px;
-    }
-
+    .two-col{display:grid;grid-template-columns:1fr;gap:14px;}
     @media(min-width:860px){
       .two-col{grid-template-columns:1fr 1fr;gap:18px;}
     }
-
     .card{
       border:1px solid var(--line);
       border-radius:12px;
       padding:18px;
       background:rgba(255,255,255,0.02);
     }
-
     .label{
       font-size:13px;
       letter-spacing:0.12em;
@@ -168,14 +153,12 @@
       color:var(--muted);
       margin:0 0 10px;
     }
-
     .cta{
       border:1px solid var(--line);
       border-radius:12px;
       padding:18px;
       background:rgba(255,255,255,0.03);
     }
-
     .cta strong{display:block;margin-bottom:6px;}
   </style>
 </head>
@@ -186,9 +169,11 @@
   <header class="Porsche">
     <div class="Porsche-inner">
       <div class="hero-layout">
-        <img class="hero-mark" src="MM - Inverted - Blk Bkgd.png" alt="" />
         <div class="hero-text">
-          <h1 class="hero-title">Millionaire Minds</h1>
+          <div class="hero-title-wrap">
+            <img class="hero-mark-float" src="MM - White on Black.png" alt="" />
+            <h1 class="hero-title">Millionaire Minds</h1>
+          </div>
           <p class="tagline">A weekly environment for clarity, skill-building, and long-term growth.</p>
         </div>
       </div>
@@ -317,6 +302,5 @@
     </section>
 
   </main>
-
 </body>
 </html>
