--- a/index.html
+++ b/index.html
@@ -66,53 +66,25 @@
       max-width:var(--max);
       background:var(--panel);
       border-radius:14px;
-      padding:28px 32px 24px;
+      padding:36px 28px 26px;
       backdrop-filter:blur(10px);
       -webkit-backdrop-filter:blur(10px);
       box-shadow:0 18px 60px rgba(0,0,0,0.45);
     }
 
-    /* HERO CONTENT */
-    .hero-layout{
-      max-width:820px;
-    }
-
-    .hero-text{
-      text-align:left;
-    }
-
-    .hero-title-wrap{
-      position:relative;
-      display:inline-block;
-    }
-
-    /* LOGO — larger, lifted, seamless contrast */
-    .hero-mark-float{
+    /* LOGO */
+    .hero-logo{
       position:absolute;
-      left:0;
-      top:-88px;
-      width:144px;
+      top:-56px;
+      left:28px; /* aligns with text padding so it never passes the M */
+      width:110px; /* ~200% size */
       height:auto;
-      padding:14px 16px;
-      border-radius:14px;
-
-      background:linear-gradient(
-        to bottom,
-        rgba(0,0,0,0.55),
-        rgba(0,0,0,0.15)
-      );
-      backdrop-filter:blur(6px);
-      -webkit-backdrop-filter:blur(6px);
-
-      opacity:0.98;
-      filter:drop-shadow(0 18px 42px rgba(0,0,0,0.55));
-      pointer-events:none;
-      user-select:none;
+      z-index:3;
     }
 
-    .hero-title{
-      margin:0 0 6px;
-      font-size:42px;
+    h1{
+      margin:0 0 10px;
+      font-size:44px;
       letter-spacing:0.2px;
     }
 
@@ -123,18 +95,6 @@
       line-height:1.5;
     }
 
-    @media (max-width:720px){
-      .hero-mark-float{
-        top:-72px;
-        width:112px;
-        padding:12px 14px;
-      }
-      .hero-title{
-        font-size:36px;
-      }
-    }
-
-    /* MAIN */
     main{
       max-width:var(--max);
       margin:0 auto;
@@ -143,13 +103,30 @@
       font-size:18px;
     }
 
-    section{margin:0 0 44px;}
-    h2{margin:0 0 14px;font-size:22px;letter-spacing:0.2px;}
-    p{margin:0 0 22px;color:var(--text);}
+    section{
+      margin:0 0 44px;
+    }
 
-    #vision p{margin-bottom:28px;}
+    h2{
+      margin:0 0 14px;
+      font-size:22px;
+      letter-spacing:0.2px;
+    }
 
-    .rule{height:1px;background:var(--line);margin:16px 0 18px;}
+    p{
+      margin:0 0 22px;
+      color:var(--text);
+    }
+
+    #vision p{
+      margin-bottom:28px;
+    }
+
+    .rule{
+      height:1px;
+      background:var(--line);
+      margin:16px 0 18px;
+    }
 
     .callout{
       border:1px solid var(--line);
@@ -158,8 +135,14 @@
       background:rgba(255,255,255,0.03);
     }
 
-    ul{margin:10px 0 0 20px;padding:0;}
-    li{margin:10px 0;}
+    ul{
+      margin:10px 0 0 20px;
+      padding:0;
+    }
+
+    li{
+      margin:10px 0;
+    }
 
     .two-col{
       display:grid;
@@ -168,7 +151,10 @@
     }
 
     @media(min-width:860px){
-      .two-col{grid-template-columns:1fr 1fr;gap:18px;}
+      .two-col{
+        grid-template-columns:1fr 1fr;
+        gap:18px;
+      }
     }
 
     .card{
@@ -193,7 +179,10 @@
       background:rgba(255,255,255,0.03);
     }
 
-    .cta strong{display:block;margin-bottom:6px;}
+    .cta strong{
+      display:block;
+      margin-bottom:6px;
+    }
   </style>
 </head>
 
@@ -201,21 +190,18 @@
 
 <header class="Porsche">
   <div class="Porsche-inner">
-    <div class="hero-layout">
-      <div class="hero-text">
-        <div class="hero-title-wrap">
-          <img
-            class="hero-mark-float"
-            src="MM - White no BKGD.png"
-            alt=""
-          />
-          <h1 class="hero-title">Millionaire Minds</h1>
-        </div>
-        <p class="tagline">
-          A weekly environment for clarity, skill-building, and long-term growth.
-        </p>
-      </div>
-    </div>
+
+    <img
+      src="MM - White no BKGD.png"
+      alt="Millionaire Minds Logo"
+      class="hero-logo"
+    />
+
+    <h1>Millionaire Minds</h1>
+    <p class="tagline">
+      A weekly environment for clarity, skill-building, and long-term growth.
+    </p>
+
   </div>
 </header>
 
@@ -223,47 +209,38 @@
 
 <section id="vision">
   <h2>The Vision</h2>
-  <p>Millionaire Minds is a group of aspiring entrepreneurs and growth-oriented individuals who gather regularly to support one another as we build practical skills, strengthen our mindset, and take consistent action together toward meaningful personal goals.</p>
 
-  <p>To have a Millionaire Mind means understanding that true value extends far beyond the accumulation of financial wealth. It is developed through experience, challenge, and reflection—shaping the knowledge, self-awareness, mindset, and social intelligence that allow someone to consistently create value for others.</p>
+  <p>
+    Millionaire Minds is a group of aspiring entrepreneurs and growth-oriented individuals who gather regularly to support one another as we build practical skills, strengthen our mindset, and take consistent action together toward meaningful personal goals.
+  </p>
 
-  <p>A Millionaire Mind solves problems, builds trust, communicates clearly, and contributes meaningfully. When a person’s thinking becomes valuable, opportunity follows—and wealth becomes a byproduct, not the pursuit.</p>
+  <p>
+    To have a Millionaire Mind means understanding that true value extends far beyond the accumulation of financial wealth. It is developed through experience, challenge, and reflection—shaping the knowledge, self-awareness, mindset, and social intelligence that allow someone to consistently create value for others.
+  </p>
 
-  <p>The group exists to help members identify and work toward goals they personally consider worth a million—goals defined by their own values, interests, and vision for their life.</p>
+  <p>
+    A Millionaire Mind solves problems, builds trust, communicates clearly, and contributes meaningfully. When a person’s thinking becomes valuable, opportunity follows—and wealth becomes a byproduct, not the pursuit.
+  </p>
 
-  <p>At its core, this is a space where people come together to think clearly about their lives, work intentionally on their goals, and learn how to create the habits, systems, and routines that support long-term progress—drawing on shared perspective, support, and accountability from others who are building alongside them.</p>
+  <p>
+    The group exists to help members identify and work toward goals they personally consider worth a million—goals defined by their own values, interests, and vision for their life.
+  </p>
+
+  <p>
+    At its core, this is a space where people come together to think clearly about their lives, work intentionally on their goals, and learn how to create the habits, systems, and routines that support long-term progress.
+  </p>
 
   <div class="rule"></div>
 
   <div class="callout">
     <p><strong>This is not a motivational group or a place for quick wins.</strong></p>
     <p>It is a space designed for long-term thinking, self-development, and personal responsibility.</p>
-    <p style="margin-bottom:0;"><strong>The goal is simple:</strong> to create an environment where progress compounds.</p>
-  </div>
-</section>
-
-<section id="why">
-  <h2>Why This Group Exists</h2>
-  <p>Many people want more from life but lack:</p>
-  <ul>
-    <li>Structure</li>
-    <li>Clarity</li>
-    <li>Consistency</li>
-    <li>A community that supports growth without pressure</li>
-  </ul>
-</section>
-
-<section id="join">
-  <h2>Interested in Joining?</h2>
-  <div class="cta">
-    <strong>If this vision resonates, you’re invited to learn more or express interest.</strong>
-    <p style="margin:0;color:var(--muted);">
-      For now, you can add a contact method here (a form, a link, or a simple instruction).
+    <p style="margin-bottom:0;">
+      <strong>The goal is simple:</strong> to create an environment where progress compounds.
     </p>
   </div>
 </section>
 
 </main>
-
 </body>
 </html>
