--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
       display:inline-flex;
       align-items:center;
       justify-content:center;
-      padding:14px 16px;
-      border-radius:14px;
+      padding:6px;
+      border-radius:6px;
       background:var(--logo-panel);
       margin-bottom:18px;
-    }
+}
 
     .logo{
       width:200px;
