--- a/index.html
+++ b/index.html
@@ -65,13 +65,12 @@
 
     /* LOGO */
     .logo-wrap{
-      display:inline-flex;
-      align-items:center;
-      justify-content:center;
-      padding:6px;
-      border-radius:6px;
-      background:var(--logo-panel);
-      margin-bottom:18px;
+  display:inline-block;
+  width:fit-content;
+  padding:6px;
+  border-radius:10px;
+  background:var(--logo-panel);
+  margin-bottom:18px;
 }
 
     .logo{
