--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
       --muted:rgba(255,255,255,0.70);
       --line:rgba(255,255,255,0.10);
       --max: 920px;
-
-      --card-radius:18px;
-      --card-pad-x:28px;
-      --card-pad-y:26px;
     }
 
     *{box-sizing:border-box;}
@@ -36,12 +32,12 @@
       content:"";
       position:absolute;
       inset:0;
-      /* Keep Porsche lettering readable while preserving contrast for text */
+      /* preserve Porsche lettering while keeping text readable */
       background:linear-gradient(
         to bottom,
         rgba(0,0,0,0.05) 0%,
-        rgba(0,0,0,0.35) 55%,
-        rgba(0,0,0,0.80) 100%
+        rgba(0,0,0,0.30) 52%,
+        rgba(0,0,0,0.78) 100%
       );
     }
     .Porsche::after{
@@ -58,43 +54,45 @@
       max-width:var(--max);
     }
 
-    /* Logo sits ABOVE the card so it never blocks Porsche lettering */
-    .brand-mark{
-      display:inline-block;
-      width:fit-content;
-      padding:6px;
-      border-radius:12px;
-      background:rgba(0,0,0,0.35);
-      backdrop-filter:blur(8px);
-      -webkit-backdrop-filter:blur(8px);
-      box-shadow:0 10px 30px rgba(0,0,0,0.35);
-      margin:0 0 10px 10px; /* slight inset from card edge */
-    }
-    .brand-mark img{
-      display:block;
-      width:56px;
-      height:auto;
-    }
-
+    /* The card (matches your reference: wide, soft, not oversized) */
     .hero-card{
+      width:100%;
       background:var(--panel);
-      border-radius:var(--card-radius);
-      padding:var(--card-pad-y) var(--card-pad-x) calc(var(--card-pad-y) + 2px);
+      border-radius:18px;
+      padding:18px 26px 22px;
       backdrop-filter:blur(10px);
       -webkit-backdrop-filter:blur(10px);
       box-shadow:0 18px 60px rgba(0,0,0,0.45);
     }
 
+    /* Logo sits INSIDE the card, top-left */
+    .hero-brand{
+      display:inline-block;
+      width:fit-content;
+      padding:6px;
+      border-radius:12px;
+      background:rgba(0,0,0,0.34);
+      backdrop-filter:blur(8px);
+      -webkit-backdrop-filter:blur(8px);
+      box-shadow:0 10px 26px rgba(0,0,0,0.35);
+      margin:0 0 12px 2px;
+    }
+    .hero-brand img{
+      display:block;
+      width:52px;
+      height:auto;
+    }
+
     h1{
       margin:0 0 10px;
-      font-size:56px;
+      font-size:44px;
       letter-spacing:0.2px;
-      line-height:1.06;
+      line-height:1.10;
     }
     .tagline{
       margin:0;
       color:var(--muted);
-      font-size:18px;
+      font-size:16px;
       line-height:1.55;
     }
 
@@ -139,18 +137,14 @@
     }
     .cta strong{display:block;margin-bottom:6px;}
 
-    /* Responsive polish */
+    /* Mobile: keep the same “look”, just scaled */
     @media (max-width:640px){
-      :root{
-        --card-radius:16px;
-        --card-pad-x:18px;
-        --card-pad-y:18px;
-      }
       .Porsche{min-height:82vh;padding:84px 16px 56px;}
-      .brand-mark{margin:0 0 10px 6px;}
-      .brand-mark img{width:52px;}
-      h1{font-size:40px;line-height:1.08;}
-      .tagline{font-size:16px;}
+      .hero-card{border-radius:16px;padding:16px 18px 18px;}
+      .hero-brand{margin:0 0 10px 0;}
+      .hero-brand img{width:50px;}
+      h1{font-size:40px;line-height:1.10;}
+      .tagline{font-size:15px;}
       main{font-size:17px;}
     }
   </style>
@@ -160,11 +154,11 @@
   <!-- HERO -->
   <header class="Porsche">
     <div class="Porsche-inner">
-      <div class="brand-mark" aria-hidden="true">
-        <img src="MM - White Transparent.png" alt="" />
-      </div>
-
       <div class="hero-card">
+        <div class="hero-brand" aria-hidden="true">
+          <img src="MM - White Transparent.png" alt="" />
+        </div>
+
         <h1>Millionaire Minds</h1>
         <p class="tagline">A weekly environment for clarity, skill-building, and long-term growth.</p>
       </div>
