--- a/index.html
+++ b/index.html
@@ -163,11 +163,17 @@
         min-height:82vh;
         padding:130px 16px 56px;
       }
+      
+  .hero-brand{
+    margin:10px 0 12px 0;
+    padding:2px;            /* match the tighter bubble */
+    border-radius:14px;
+    background:rgba(0,0,0,0.28);
+    backdrop-filter:blur(4px);
+    -webkit-backdrop-filter:blur(4px);
+  }
 
-      .hero-brand{
-        margin:10px 0 12px 0;
-        padding:10px;
-      }
+
 
       .hero-brand img{
         width:96px;
