--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
         <strong>If this vision resonates, you’re invited to learn more or express interest.</strong>
 
         <a class="cta-button" href="https://forms.gle/dKHv2qPyoKybjTj37" target="_blank" rel="noopener">
-          Click to Join
+          Request an Invite
         </a>
       </div>
     </section>
