--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <title>Millionaire Minds</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+ <link rel="apple-touch-icon" sizes="180x180" href="MM%20-%20Black%20on%20White.png">
+
+
   <style>
     :root{
       --bg:#0b0b0b;
