--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Millionaire Minds</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
- <link rel="apple-touch-icon" sizes="180x180" href="MM%20-%20Black%20on%20White.png">
+ <link rel="apple-touch-icon" sizes="180x180" href="MM%20-%20BonW%20180x180.png">
 
 
   <style>
