--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>Millionaire Minds</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
- <link rel="apple-touch-icon" sizes="180x180" href="MM%%20Black%20on%20White%20Larger.png">
+ <link rel="apple-touch-icon" sizes="180x180" href="MM%20Black%20on%20White%20Larger.png">
+
 
 
   <style>
